--- a/04-setting-the-scenes/projects/starter/Journalyst/Journalyst/Info.plist
+++ b/04-setting-the-scenes/projects/starter/Journalyst/Journalyst/Info.plist
@@ -26,7 +26,7 @@
 	<string>Allow Journalyst to take pictures for your entries</string>
 	<key>NSUserActivityTypes</key>
 	<array>
-		<string>com.raywenderlich.EntryOpenDetailActivityType</string>
+		<string>com.yourcompany.EntryOpenDetailActivityType</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
